--- a/src/app/dashboard/home/lease-detail/lease-detail.component.html
+++ b/src/app/dashboard/home/lease-detail/lease-detail.component.html
@@ -12,7 +12,7 @@
           </li>
           <li>
               <label>Lease # : </label>
-              <span class="">{{selectedLease['leaseNo']}}</span>
+              <span class="" *ngIf="selectedLease">{{selectedLease['leaseNo']}}</span>
           </li>
       </ul>
 
