--- a/src/app/dashboard/alerts-popup/alerts-popup.component.html
+++ b/src/app/dashboard/alerts-popup/alerts-popup.component.html
@@ -11,12 +11,12 @@
           <!-- Modal body -->
           <div class="modal-body ">
 
-              <div class="cntWrap  p-3">
-                  <img src="assets/img/epp_m.svg"><span>Equipment Protection Program (3) </span>
+              <div class="cntWrap  p-3" *ngIf="equipmentLeaseCount">
+                 <a [routerLink]="['/dashboard/epp']"> <img src="assets/img/epp_m.svg"><span>Equipment Protection Program ({{equipmentLeaseCount}}) </span></a>
               </div>
 
-              <div class="cntWrap  p-3 mt-2">
-                  <img src="assets/img/default-icon.svg"><span>Default Lease(3) </span>
+              <div class="cntWrap  p-3 mt-2" *ngIf="defaultLeaseCount">
+                  <img src="assets/img/default-icon.svg"><span>Default Lease({{defaultLeaseCount}}) </span>
               </div>
 
 
