--- a/src/app/dashboard/breadcrumb/breadcrumb.component.html
+++ b/src/app/dashboard/breadcrumb/breadcrumb.component.html
@@ -1,7 +1,7 @@
 <div class="row db-bread-wrap">
   <ol class="breadcrumb  w-100">
-      <li class="breadcrumb-item"><a href="#">urLease</a></li>
-      <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+      <li class="breadcrumb-item">urLease</li>
+      <li class="breadcrumb-item">Dashboard</li>
       <li class="breadcrumb-item active">Equipment</li>
   </ol>
 
