--- a/src/app/dashboard/epp/epp.component.html
+++ b/src/app/dashboard/epp/epp.component.html
@@ -1,207 +1,211 @@
-<div class="row ">
-    <div class="col-12 db-inner-wrap faq  ">
-        <!--breadcrums Starts Here-->
-        <div class="row db-bread-wrap pt-3">
-                <ol class="breadcrumb  w-100">
-                    <li class="breadcrumb-item"><a href="#">urLease</a></li>
-                    <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
-                    <li class="breadcrumb-item active">EPP</li>
-                </ol>
+<div class="col-12 db-inner-wrap  ">
+  <!--breadcrums Starts Here-->
+  <div class="row db-bread-wrap">
+    <ol class="breadcrumb  w-100">
+      <li class="breadcrumb-item">urLease</li>
+      <li class="breadcrumb-item">Dashboard</li>
+      <li class="breadcrumb-item active">EPP</li>
+    </ol>
+
+  </div>
+  <!--wraper for FAQ-->
+  <div class="db-inner-box col-12 epp eol ">
+    <!--EPP basic Details Starts-->
+    <div class="row ">
+      <div class="col-12">
+        <ul class="details">
+          <li>
+            <label>Merchant Name:</label>
+            <span class="">BBQ & Burgers</span>
+          </li>
+          <li>
+            <label>
+              Contact Name:</label>
+            <span class="">Alan Fresco</span>
+          </li>
+          <li>
+            <label>Total Monthly EPP:</label>
+            <span class="activeBg"> ${{totalAmt}}.00</span>
+          </li>
+
+        </ul>
+      </div>
+
+    </div>
+    <!--EPP basic Details Ends-->
+
+
+    <!--Horizondal Line Starts-->
+    <div class="btmBorder"></div>
+    <!--Horizondal Line Starts-->
+
+
+    <!--Toggle Button Starts-->
+    <div class="row ">
+      <div class="col-12">
+        <!--warning txt Starts-->
+        <p class="cntTxt">
+          You have the following leases that do not have any equipment protection coverage. Please select the leases for
+          which you would like to have EPP coverage. </p>
+        <!--warning txt Ends-->
+
+
+        <!--Epp Lease toggles Starts-->
+        <div class="row">
+          <div class="toggleWrap" *ngIf="leaseData">
+            <div class="toggle-item-wrap" [ngClass]="{ 'active': leaseFormGroup.controls[item.leaseNo].value }"
+                 *ngFor="let item of leaseData">
+              <div class="leftWrap">
+                <p class="">Lease #</p>
+                <p class="">{{item.leaseNo}}</p>
+              </div>
+              <div class="rightWrap">
+                <p class=""><label class="switch">
+                  <input type="checkbox" class="togBtn" id="togBtn"
+                         [formControl]="leaseFormGroup.controls[item.leaseNo]" (change)="onToggleChange($event)">
+                  <span class="slider round en-first-checkbox"></span>
+                </label></p>
+                <p class="">${{leaseFormGroup.controls[item.leaseNo].value?'10':'0'}}.00</p>
+              </div>
+
 
             </div>
-
-        <div class="row">
-            <ul class="details px-4 pt-4">
-                <li>
-                    <label>Marchent Name:</label>
-                    <span class="">BBQ & Burgers</span>
-                </li>
-                <li>
-                    <label>
-                        Contact Name:</label>
-                    <span class="">Alan Fresco</span>
-                </li>
-                <li>
-                    <label>Total Monthly EPP:</label>
-                    <span class="activeBg"> ${{totalAmt}}.00</span>
-                </li>
-
-            </ul>
+          </div>
 
         </div>
+        <!--Epp Lease toggles Ends-->
+
+      </div>
+    </div>
+    <!--Toggle Button Ends-->
+
+    <!--Horizondal Line Starts-->
+
+    <div class="btmBorder"></div>
+    <!--Horizondal Line Starts-->
 
 
-        <hr>
-        <div class="row">
-            <div class="col-12">
-                <p class="cntTxt pb-4"><img src="assets/img/alertred.svg"> You have the following leases that do
-                    not
-                    have any equipment protection
-                    coverage. Please select the leases for which you would like to have EPP coverage. </p>
-                <div class="row">
-                    <div class="col-12 col-md-6  ">
-                        <div class="row ">
-                            <div class="col-12 col-md-6" *ngFor="let item of leaseData['Leases']" style="padding: 20px;">
-                                <div class="w-50 float-left">
-                                    <label class="">Lease #</label>
-                                    <br>
-                                    <span class="">{{item.leaseId}}</span></div>
-                                <div class="w-50 float-right">
-                                    <!-- Rectangular switch -->
-                                    <label class="switch">
-                                        <input type="checkbox" class="togBtn" id="togBtn" [formControl]="leaseFormGroup.controls[item.leaseId]">
-                                        <span class="slider round en-first-checkbox" ></span>
-                                    </label>
-                                    <span class="txtthree ">${{leaseFormGroup.controls[item.leaseId].value?'10':'0'}}.00</span>
-                                </div>
+    <!--Checkbox Boxes Wrap Starts Here-->
+    <div class="row ">
+      <div class="col-12">
 
 
-                            </div>
-                            <!-- <div class="col-12 col-md-6">
-                                <div class="w-50 float-left">
-                                    <label class="">Lease #</label>
-                                    <br>
-                                    <span class="">052-5234567-000</span></div>
-                                <div class="w-50 float-right">
-                                    <label class="switch">
-                                        <input type="checkbox" class="togBtn" id="togBtn2">
-                                        <span class="slider round en-second-checkbox" data-toggle="modal"
-                                              data-target="#myModal2"></span>
-                                    </label>
-                                    <span class="txtthree">$0.00</span>
-                                </div>
-                            </div> -->
+        <!--Check Box Starts-->
 
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="epp-cb-wrap" [ngClass]="{ 'opacity-disable' : checkbox.agree }">
+          <input type="checkbox" [checked]="yesModel" [disabled]="checkbox.yes" name="option1" id="checkbox1"
+                 class="check1" value="yes" (change)="onYesNoClicked($event)"/>
+          <label for="checkbox1" class="label1"> YES, I choose to enroll in First Data's Equipment Protection
+            Program</label>
 
-
+          <input type="checkbox" [checked]="noModel" [disabled]="checkbox.no" name="option2" id="checkbox2"
+                 class="check2" value="no" (change)="onYesNoClicked($event)"/>
+          <label for="checkbox2" class="label2"> NO, I am providing a certificate of insurance that names First Data
+            as the
+            loss payee to meet the insurance requirement of my lease agreement. The
+            insurance certificate is included with this response </label>
         </div>
-        <hr>
-        <div class="row">
-            <div class="col-12">
-                <br>
+        <!--Check Box Ends-->
+
+        <!--cnt Txt Starts-->
+        <p>
+          Enrollment in the First Data Equipment Protection Program relieves you of the requirement
+          to maintain insurance on your leased equipment</p>
+        <p>
+          By checking YES above, the Lessee(s) is/are relived of their obligation to provide
+          proof
+          of insurance under the Lease Agreement. Each lease that checks Yes above pays a
+          monthly
+          charge to FDMS, determined by FBMS and included on the monthly lease payment. The
+          monthly charge includes a program fee and compensation to EDMS for program
+          administration. FDMS reserves the right to change the monthly charge. We will notify you
+          thirty (30) days prior to the effective date of charge.</p>
+        <p>
+          Board Protection: The First Data Equipment Protection Program provides FULL REPLACEMENT
+          protection for loss due to a wide variety of perils.</p>
+        <!--cnt Txt Ends-->
 
 
-                    <div class="form-group">
-                        <div class="form-check">
-                            <input disabled class="form-check-input terms" type="checkbox" id="gridCheck">
-                            <label class="form-check-label ctrlPad" for="gridCheck">
-                                YES, I choose to enroll in First Data's Equipment Protection
-                                Program </label>
-                        </div>
-                        <div class="form-check">
-                            <input disabled class="form-check-input terms" class="form-check-input"
-                                   type="checkbox" id="gridCheck1">
-                            <label class="form-check-label ctrlPad" for="gridCheck">
-                                NO, I am providing a certificate of insurance that names First Data as the
-                                loss payee to meet the insurance requirement of my lease agreement. The
-                                insurance certificate is included with this response </label>
-                        </div>
-                    </div>
-                <p>Enrollment in the First Data Equipment Protection Program relieves you of the requirement
-                    to maintain insurance on your leased equipment</p>
-                <p><b>By checking YES above, the Lessee(s) is/are relived of their obligation to provide
-                    proof
-                    of insurance under the Lease Agreement.</b> Each lease that checks Yes above pays a
-                    monthly
-                    charge to FDMS, determined by FBMS and included on the monthly lease payment. The
-                    monthly charge includes a program fee and compensation to EDMS for program
-                    administration. FDMS reserves the right to change the monthly charge. We will notify you
-                    thirty (30) days prior to the effective date of charge.</p>
-                <p>Board Protection: The First Data Equipment Protection Program provides FULL REPLACEMENT
-                    protection for loss due to a wide variety of perils.</p>
-                <br>
-                <br>
-            </div>
-
-
-        </div>
-
-        <div class="row">
-
-            <div class="col-12 col-sm-6 listWrap py-4 ">
-                <ul>
-                    <li>
-                        Accidental Damage
-                    </li>
-                    <li> Burglary Theft and Robbery</li>
-                    <li> Collapse</li>
-                    <li> Employee Theft</li>
-                    <li> Falling Objects</li>
-                    <li> Fire and Smoke
-                </ul>
-
-            </div>
-            <div class="col-12 col-sm-6 listWrap py-4">
-                <ul>
-                    <li>
-                        Hail
-
-                    </li>
-                    <li> Flood and Water
-                    </li>
-                    <li>Lightning and Power Surge
-                    </li>
-                    <li> Transit
-                    </li>
-                    <li> Vandalism
-                    </li>
-                    <li> Wind, Hurricane and Tornado
-                </ul>
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 pt-5">
-
-                <p class="text-center">Perils shown in bold above are often not covered by standard business
-                    insurance
-                    policies.</p>
-            </div>
-
-        </div>
-        <hr>
-        <div class="row">
-            <div class="col-12">
-
-
-                    <div class="form-group">
-                        <div class="form-check">
-                            <div class="row">
-
-
-                                <div class="col-8">
-
-
-                                    <input disabled class="form-check-input terms" class="form-check-input"
-                                           type="checkbox" id="gridCheck2"><label class="ctrlPad">
-                                    I agree to the First Data Terms of Service and Privacy Policy </label>
-                                </div>
-                                <div class="col-4 text-right butAdj">
-                                    <button disabled
-                                            class="form-check-input terms btn btn-outline-secondary"
-                                            type="button"
-                                    >SUBMIT
-                                    </button>
-                                </div>
-                            </div>
-
-
-                        </div>
-
-                    </div>
-
-
-            </div>
-
-
-        </div>
+      </div>
 
 
     </div>
+    <!--Checkbox Boxes Wrap Starts Here-->
+
+
+    <!--EPP  Covers List Starts-->
+    <div class="row ">
+      <div class="col-12 col-sm-6 listWrap ">
+        <ul>
+          <li>
+            Accidental Damage
+          </li>
+          <li> Burglary Theft and Robbery</li>
+          <li> Collapse</li>
+          <li> Employee Theft</li>
+          <li> Falling Objects</li>
+          <li> Fire and Smoke
+        </ul>
+
+      </div>
+      <div class="col-12 col-sm-6 listWrap">
+        <ul>
+          <li>
+            Hail
+
+          </li>
+          <li> Flood and Water
+          </li>
+          <li>Lightning and Power Surge
+          </li>
+          <li> Transit
+          </li>
+          <li> Vandalism
+          </li>
+          <li> Wind, Hurricane and Tornado
+        </ul>
+
+      </div>
+      <div class=" ftrtxt ">Perils shown in bold above are often not covered by standard business
+        insurance
+        policies.
+      </div>
+    </div>
+    <!--EPP  Covers List  Ends-->
+
+
+    <!--Horizondal Line Starts-->
+    <div class="btmBorder"></div>
+    <!--Horizondal Line Starts-->
+
+
+    <!--submit but wrap Starts-->
+    <div class="row ">
+
+      <div class="col-sm-12 col-md-9">
+        <!--Check Box Starts-->
+        <div class="epp-cb-wrap" [ngClass]="{ 'opacity-disable' : checkbox.agree }">
+          <input type="checkbox" [checked]="agreeModel" [disabled]="checkbox.agree" name="option1" id="checkbox3" value="agree" class="check3" (change)="onYesNoClicked($event)"/>
+          <label for="checkbox3" class="label3"> I agree to the First Data Terms of Service and Privacy Policy</label>
+
+        </div>
+        <!--Check Box Ends-->
+
+
+      </div>
+
+      <div class="col-sm-12 col-md-3 ftrBtnWrap  text-md-right text-center">
+        <button type="button" [disabled]="checkbox.submit" [routerLink]="['/dashboard/home']" class="btn butSec   ">
+          Submit
+
+        </button>
+      </div>
+
+
+    </div>
+    <!--submit but wrap Startss-->
+  </div>
 </div>
 
-<epp-popup [(showPopup)]="showPopup"></epp-popup>
+<epp-popup *ngIf="showPopup" [noButtonPopup]="noButtonPopup" (addClicked)="addButtonClicked();"
+           (closeClicked)="closePopup();"></epp-popup>
