--- a/src/app/landing-page/land-cnt-02/land-cnt-02.component.html
+++ b/src/app/landing-page/land-cnt-02/land-cnt-02.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12 col-md-6 land-cnt-02-inner order-md-last ">
 
-      <h4 class="fd-SubHeading"> Title Goes here</h4>
+      <h4 class="fd-SubHeading"> Global Leasing - Partner Benefits</h4>
 
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
         standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
