--- a/src/app/dashboard/left-side-bar/left-side-bar.component.html
+++ b/src/app/dashboard/left-side-bar/left-side-bar.component.html
@@ -5,7 +5,7 @@
 <div id="SidenavLft" [ngClass]="{'ctrlWidthLft':lftSide}" class="sidenav">
 
   <div class="lft-but-wrap">
-    <div class="loginname">{{leaseData["merchantName"]}}
+    <div class="loginname">{{leaseData["contactName"]}}
     </div>
     <div class="signout-Wrap" (click)="logout()">
       Sign out
