new changes made today

--- a/src/app/dashboard/contact/contact.component.html
+++ b/src/app/dashboard/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="col-12 db-inner-wrap  ">
+<div class="col-12 db-inner-wrap   ">
   <!--breadcrums Starts Here-->
   <div class="row db-bread-wrap">
     <ol class="breadcrumb  w-100">
@@ -9,9 +9,11 @@
 
   </div>
   <!--wraper for FAQ-->
-  <div class="db-inner-box col-12 ">
+  <div class="db-inner-box col-12 contactWrap ">
+    <div class="faqWrap">Contact</div>
+    <div class="btmBorder"></div>
+    <p>Customer Service: +1 877-257-2094</p>
 
-    <h1>Contact</h1>
   </div>
 
 
