--- a/src/app/dashboard/eol/eol.component.html
+++ b/src/app/dashboard/eol/eol.component.html
@@ -9,7 +9,7 @@
 
   </div>
   <!--wraper for FAQ-->
-  <div class="db-inner-box col-12 eol ">
+  <div class="db-inner-box col-12 eol diff ">
     <div class="faqWrap">End of Lease Options</div>
 
     <div class="row">
@@ -31,12 +31,9 @@
             <div class="card-body">
 
               <!--Anzwer starts-->
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book. It has survived not only five. Lorem Ipsum is simply dummy
-                text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
-                ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                specimen book. It has survived not only five.</p>
+              <p>Continue using the equipment on a month to month basis at the existing monthly lease payment amount. If
+                you choose this option, there is no action needed. FDGL will continue to debit the account on file for
+                the scheduled monthly payments until you choose to return or purchase the equipment.</p>
 
 
             </div>
@@ -59,12 +56,7 @@
             <div class="card-body">
 
               <!--Anzwer starts-->
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book. It has survived not only five. Lorem Ipsum is simply dummy
-                text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
-                ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                specimen book. It has survived not only five.</p>
+              <p>To obtain the cost of the equipment simply call us at <span>1-877-257-9094.</span></p>
 
 
             </div>
@@ -87,12 +79,16 @@
             <div class="card-body">
 
               <!--Anzwer starts-->
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book. It has survived not only five. Lorem Ipsum is simply dummy
-                text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
-                ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                specimen book. It has survived not only five.</p>
+              <p>Return the Equipment: Once the equipment is received, in good condition, all monthly billing will stop
+                and there will be no further obligations. Please allow sufficient time prior to your monthly due date to
+                avoid being billed an additional month. The return address is as follows:</p>
+              <ul>
+                <li><b>First Data Hardware Services</b></li>
+                <li> Attn: Terminal Returns</li>
+                <li>Lease Number: ###-#######-###</li>
+                <li> 1169 Canton Road</li>
+                <li> Marietta, GA 30066</li>
+              </ul>
 
 
             </div>
