--- a/src/app/dashboard/epp/epp.component.html
+++ b/src/app/dashboard/epp/epp.component.html
@@ -16,12 +16,12 @@
         <ul class="details">
           <li>
             <label>Merchant Name:</label>
-            <span class="">BBQ & Burgers</span>
+            <span class="">{{merchanName}}</span>
           </li>
           <li>
             <label>
               Contact Name:</label>
-            <span class="">Alan Fresco</span>
+            <span class="">{{contactName}}</span>
           </li>
           <li>
             <label>Total Monthly EPP:</label>
