--- a/src/app/landing-page/land-cnt-01/land-cnt-01.component.html
+++ b/src/app/landing-page/land-cnt-01/land-cnt-01.component.html
@@ -9,14 +9,14 @@
         equipment to start earning for you immediately so that you can keep your focus on growing your
         day-to-day business.</p>
       <p>Conserve your capital - what else could you do with your cash and credit lines?</p>
-      <ul class="">
+      <ul class="land-cnt-wrap">
 
-        <li>Expand your business</li>
-        <li>Rejuvenate your website</li>
-        <li>Increase advertising and promotional funds</li>
-        <li>Replenish low or out-of-stock inventory</li>
-        <li>Renovate your storefront or modernize your warehouse</li>
-        <li>Refresh your fleet vehicles</li>
+        <li><span>&#x25CF;</span>Expand your business</li>
+        <li><span>&#x25CF;</span>Rejuvenate your website</li>
+        <li><span>&#x25CF;</span>Increase advertising and promotional funds</li>
+        <li><span>&#x25CF;</span>Replenish low or out-of-stock inventory</li>
+        <li><span>&#x25CF;</span>Renovate your storefront or modernize your warehouse</li>
+        <li><span>&#x25CF;</span>Refresh your fleet vehicles</li>
 
 
       </ul>
@@ -24,12 +24,13 @@
     </div>
     <div class="col-12 col-md-6 bg-lightgray ">
       <div class="row">
-          <div class="col-12 land-img-mx  text-center ">
-            <img class="img-fluid" src="./assets/img/landCntOne.png">
-          </div>
+        <div class="col-12 land-img-mx  text-center ">
+          <img class="img-fluid" src="./assets/img/landCntOne.png">
+        </div>
       </div>
 
     </div>
   </div>
 </div>
+
 
