--- a/src/app/landing-page/land-cnt-02/land-cnt-02.component.html
+++ b/src/app/landing-page/land-cnt-02/land-cnt-02.component.html
@@ -1,30 +1,46 @@
 <div class="col-12 land-cnt-01 ">
+  <div class="clearfix"></div>
   <div class="row">
-    <div class="col-12 col-md-6 land-cnt-02-inner order-md-last ">
+    <div class="col-12 col-md-6 land-cnt-01-inner order-md-last  ">
 
       <h4 class="fd-SubHeading"> Global Leasing - Partner Benefits</h4>
 
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-        to make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-        typesetting, Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-        scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-        electronic typesetting,
-      </p>
+      <ul>
+        <li><span>1.</span> <span class="stBld">Quick Funding – </span> 95% of leases processed for funding same day
+          through FDGL’s high-performance
+          boarding team
+        </li>
+        <li><span>2.</span><span class="stBld"> Competitive Funding Rates – </span>lucrative up-front lease funding
+          gives you immediate access
+          to cash to invest in your business
+        </li>
+        <li><span>3.</span><span class="stBld"> Improved Merchant Retention – </span>leases help guard against early
+          life merchant attrition
+        </li>
+        <li><span>4.</span> <span class="stBld">Partner Friendly Tools – </span>online application submission and
+          tracking processes as well as
+          web-based portfolio reporting tools
+        </li>
+        <li><span>5.</span><span class="stBld"> Stability –</span> strength and scale of First Data with dedicated
+          operations and partner
+          management teams
+        </li>
+        <li><span>6.</span> <span class="stBld">The highest level of integrity in the industry!</span>
+        </li>
+
+      </ul>
 
     </div>
-    <div class="col-12 col-md-6 bg-lightgray">
-      <div class="row">
-
-        <div class="col-12 land-img-mx  text-center ">
-          <img class="img-fluid" src="./assets/img/landCntTwo.png">
-        </div>
+    <div class="col-12 col-md-6 bg-lightgray ">
+      <div class="col-12 land-img-mx  text-center ">
+        <img class="img-fluid" src="./assets/img/landCntTwo.png">
       </div>
+
     </div>
-
-
   </div>
-
-
 </div>
+
+
+
+
+
