--- a/src/app/dashboard/claims/claims.component.html
+++ b/src/app/dashboard/claims/claims.component.html
@@ -14,10 +14,15 @@
     <div class="faqWrap">How to Raise a Claim</div>
     <div class="btmBorder"></div>
     <br><br>
+    <div class="col claim-inner">
+      <img src="assets/img/c-banner.jpg">
+
+
+    </div>
     <h5>If you have experienced a loss due to one of the following reasons:</h5>
     <br>
 
-    <div class="row">
+    <div class="row claim-arrow">
       <div class="col-6">
         <ul>
           <li>Accidental Damage</li>
@@ -40,7 +45,7 @@
         </ul>
       </div>
     </div>
-    <br>
+    <br><br><br>
     <h5>Please follow these steps:</h5>
     <br>
     <p><span>1.</span> Email <a
@@ -53,6 +58,7 @@
       <button type="button" [routerLink]="['/dashboard/home']" class="btn butSec  ">Done
       </button>
     </div>
+    <br><br><br><br>
   </div>
 
 
