--- a/src/app/dashboard/payment-help-popup/payment-help-popup.component.html
+++ b/src/app/dashboard/payment-help-popup/payment-help-popup.component.html
@@ -1,29 +1,39 @@
 <div class="modal fade" [ngClass]="{'show':showPopup}" id="paymentpop" [style.display]="showPopup?'block':'none'">
   <div class="modal-dialog">
-      <div class="modal-content">
+    <div class="modal-content">
 
-          <!-- Modal Header -->
-          <div class="modal-header">
-              <h4 class="modal-title"></h4>
-              <button type="button" class="close" data-dismiss="modal" (click)="closeButtonClicked()"><img src="assets/img/close-icon.svg"></button>
-          </div>
-
-          <!-- Modal body -->
-          <div class="modal-body ">
-              <div class="mod-heading mb-5">How to Make a Payment</div>
-              <p class="px-5 pb-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                  Ipsum
-                  has been the
-                  industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                  and scrambled it to make a type specimen book. It has survived not only five.</p>
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title"></h4>
+        <button type="button" class="close" data-dismiss="modal" (click)="closeButtonClicked()"><img
+          src="assets/img/close-icon.svg"></button>
+      </div>
 
 
-          </div>
+      <!-- Modal body -->
+      <div class="modal-body ">
+        <div class="mod-heading mb-5">How to Make a Payment</div>
+        <p class="text-left">Please include your lease number on the check</p>
+        <p class="text-left"><span>Email: </span>Copy of a voided check to <a
+          href="mailto:lease.accounting@firstdata.com"
+          target="_new">lease.accounting@firstdata.com</a>
+        </p>
+        <p class="text-left"><span>Mail:</span>Please include your lease number on the
+          check.</p>
+        <p class="popbld">First Data Global Leasing<br>
+          PO Box 173845<br>
+          Denver, CO 80217</p>
 
-          <!-- Modal footer -->
-          <div class="modal-footer ">
-          </div>
+        <br><br>
+
 
       </div>
+
+
+      <!-- Modal footer -->
+      <div class="modal-footer ">
+      </div>
+
+    </div>
   </div>
 </div>
