new changes made today

--- a/src/app/dashboard/epp/epp.component.html
+++ b/src/app/dashboard/epp/epp.component.html
@@ -195,7 +195,7 @@
       </div>
 
       <div class="col-sm-12 col-md-3 ftrBtnWrap  text-md-right text-center">
-        <button type="button" [disabled]="checkbox.submit" [routerLink]="['/dashboard/home']" class="btn butSec   ">
+        <button type="button" [disabled]="checkbox.submit" [routerLink]="['eppthank']" class="btn butSec   ">
           Submit
 
         </button>
