--- a/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
+++ b/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
@@ -419,6 +419,10 @@
                   <span class="">{{selectedLease['equipmentCoverage']['equipmentCoverage']}}</span>
                 </li>
                 <li>
+                  <label>Equipment Coverage Type:</label>
+                  <span class="">{{selectedLease['equipmentCoverage']['equipmentCoverageType']}}</span>
+                </li>
+                <li>
                   <label>
                     Equipment Coverage Company:</label>
                   <span class=""> {{selectedLease['equipmentCoverage']['equipmentCoverageCompaney']}}</span>
