--- a/src/app/errorhandler/not-found/not-found.component.html
+++ b/src/app/errorhandler/not-found/not-found.component.html
@@ -1,3 +1,3 @@
 <div class="error-handler">
-    <h1>Page Under consturction or pelase check url one more time</h1>
+    <h1>Page Under construction or pelase check url one more time</h1>
 </div>
